<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:background="@drawable/popup_rounded"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_normal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/titan_one"
        android:gravity="center"
        android:text="@string/cikis_soru"
        android:textColor="@color/backgroundcolor"
        app:layout_constraintBottom_toTopOf="@+id/dialog_cikis_hayir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dialog_cikis_hayir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/nobuton"
        android:fontFamily="@font/titan_one"
        android:text="@string/hayir"
        android:textColor="@color/backgroundcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_cikis_evet"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dialog_cikis_evet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/yesbuton"
        android:fontFamily="@font/titan_one"
        android:text="@string/evet"
        android:textColor="@color/backgroundcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_cikis_hayir" />


</androidx.constraintlayout.widget.ConstraintLayout>