<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluedark"
    android:orientation="vertical">


    <app.word.game.customview.CvTopMenu
        android:id="@+id/cvHeart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"

        app:layout_constraintEnd_toStartOf="@+id/cvTopTrue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <app.word.game.customview.CvTopMenu
        android:id="@+id/cvTopTrue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/cvTopFalse"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cvHeart"
        app:layout_constraintTop_toTopOf="parent" />

    <app.word.game.customview.CvTopMenu
        android:id="@+id/cvTopFalse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cvTopTrue"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSalles"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/card_background_next"
        android:fontFamily="@font/titan_one"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="Sınırsız can kazan"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_art" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/titan_one"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvTopFalse"
        tools:text="Level: 1" />

    <app.word.game.customview.CvCategoryItem
        android:id="@+id/category_sience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:image="@drawable/bilim"
        app:layout_constraintBottom_toTopOf="@+id/ivPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/bilim" />

    <app.word.game.customview.CvCategoryItem
        android:id="@+id/category_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:image="@drawable/tarihim"
        app:layout_constraintBottom_toBottomOf="@+id/ivPlay"
        app:layout_constraintEnd_toStartOf="@+id/ivPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/category_sience"
        app:title="@string/tarih" />

    <app.word.game.customview.CvCategoryItem
        android:id="@+id/category_geography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:image="@drawable/cografya"
        app:layout_constraintBottom_toBottomOf="@+id/category_art"
        app:layout_constraintEnd_toStartOf="@+id/ivPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivPlay"
        app:title="@string/cografya" />

    <app.word.game.customview.CvCategoryItem
        android:id="@+id/category_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:image="@drawable/spor"
        app:layout_constraintBottom_toBottomOf="@+id/category_art"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPlay"
        app:layout_constraintTop_toTopOf="@+id/ivPlay"
        app:title="@string/spor" />

    <app.word.game.customview.CvCategoryItem
        android:id="@+id/category_fun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:image="@drawable/eglence"
        app:layout_constraintBottom_toBottomOf="@+id/ivPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPlay"
        app:layout_constraintTop_toTopOf="@+id/category_sience"
        app:title="@string/eglence" />

    <app.word.game.customview.CvCategoryItem
        android:id="@+id/category_art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:image="@drawable/sanat"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlay"
        app:title="@string/sanat" />

    <ImageView
        android:id="@+id/ivPlay"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:srcCompat="@drawable/pusula" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7740710689946524/1782432608"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>